2011-04-14  Nancy Piedra  <nancy.piedra@nokia.com>

Reviewed by Benjamin Poulain.

        Added additional test for parsing codecs parameter.
        https://bugs.webkit.org/show_bug.cgi?id=58188

        * media/video-can-play-type-expected.txt:
        * media/video-can-play-type.html:
2011-04-14  Nancy Piedra  <nancy.piedra@nokia.com>

        Reviewed by Benjamin Poulain.

        [Qt] MediaPlayerPrivateQt::supportsType does not parse codec parameter
        https://bugs.webkit.org/show_bug.cgi?id=58188

        The codec parameter in MediaPlayerPrivateQt::supportsType was not parsed into
        a QStringList. This change parses and trims the list.

        An additional test was added to video-can-play-type.html to test parsing of codec parameter.

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivateQt::supportsType):

Canonical link: https://commits.webkit.org/73593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83836 268f45cc-cd09-0410-ab3c-d52691b4dbfc